task2/code3/t.txt
alexgud@alexgud-NBD-WXX9:~/study/msu/kurs4/distributed_systems/MSU_CMC_2025_Distributed_systems/task2/code3$ make 
/home/alexgud/opt/openmpi-ulfm-api/bin/mpicc -O2 -std=c11 -Wall -Wextra -Wpedantic -o gauss_spares_ft gauss_spares_ft.c 
gauss_spares_ft.c: In function ‘main’:
gauss_spares_ft.c:307:19: error: lvalue required as unary ‘&’ operand
  307 |     MPI_Comm_free(&MPI_COMM_WORLD);
      |                   ^
gauss_spares_ft.c:308:20: error: lvalue required as left operand of assignment
  308 |     MPI_COMM_WORLD = neww;
      |                    ^
gauss_spares_ft.c:269:7: warning: ignoring return value of ‘fscanf’ declared with attribute ‘warn_unused_result’ [-Wunused-result]
  269 |       fscanf(f, "%d", &N);
      |       ^~~~~~~~~~~~~~~~~~~
gauss_spares_ft.c: At top level:
gauss_spares_ft.c:32:13: warning: ‘die_mpi’ defined but not used [-Wunused-function]
   32 | static void die_mpi(const char* where, int rc) {
      |             ^~~~~~~
make: *** [Makefile:38: gauss_spares_ft] Error 1
alexgud@alexgud-NBD-WXX9
